trying to fix bug with horizontal scroll bar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: #161616;
   color: #ffffff;
+  overflow-x: hidden;
 }
 
 code {
